--- a/Calcraft/Calcraft/Base.lproj/LaunchScreen.storyboard
+++ b/Calcraft/Calcraft/Base.lproj/LaunchScreen.storyboard
@@ -16,8 +16,45 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Minecraft-bg" translatesAutoresizingMaskIntoConstraints="NO" id="D1P-lo-AyZ">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Steve" translatesAutoresizingMaskIntoConstraints="NO" id="WpF-zd-ITv">
+                                <rect key="frame" x="180" y="160" width="240" height="279"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="B8z-sA-qyD"/>
+                                    <constraint firstAttribute="height" constant="279" id="ZAV-NE-ebr"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Calcraft" translatesAutoresizingMaskIntoConstraints="NO" id="t0P-Y8-VCq">
+                                <rect key="frame" x="180" y="20" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="Mwp-Ua-kyY"/>
+                                    <constraint firstAttribute="height" constant="128" id="ckt-Pp-PZO"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="t0P-Y8-VCq" firstAttribute="leading" secondItem="WpF-zd-ITv" secondAttribute="leading" id="30m-B7-W5d"/>
+                            <constraint firstItem="t0P-Y8-VCq" firstAttribute="centerX" secondItem="D1P-lo-AyZ" secondAttribute="centerX" id="G1p-ga-Mnb"/>
+                            <constraint firstItem="WpF-zd-ITv" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="PBQ-aO-LhC"/>
+                            <constraint firstItem="D1P-lo-AyZ" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="TBb-DC-gnQ"/>
+                            <constraint firstItem="D1P-lo-AyZ" firstAttribute="centerY" secondItem="WpF-zd-ITv" secondAttribute="centerY" id="Xfa-WB-9Fz"/>
+                            <constraint firstItem="t0P-Y8-VCq" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="c5u-Rv-mjB"/>
+                            <constraint firstItem="WpF-zd-ITv" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="jby-fG-90P"/>
+                            <constraint firstAttribute="trailing" secondItem="t0P-Y8-VCq" secondAttribute="trailing" id="kEq-2l-1VX"/>
+                            <constraint firstItem="t0P-Y8-VCq" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="niD-27-vOe"/>
+                            <constraint firstItem="D1P-lo-AyZ" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="soh-1H-4Zc"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="c5u-Rv-mjB"/>
+                                <exclude reference="kEq-2l-1VX"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -25,4 +62,9 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Calcraft" width="501" height="100"/>
+        <image name="Minecraft-bg" width="1366" height="706"/>
+        <image name="Steve" width="700" height="931"/>
+    </resources>
 </document>
